manifests/guestbook/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-ui
  labels:
    app: guestbook-ui
spec:
  type: ClusterIP
  selector:
    app: guestbook-ui
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
